[package]
name = "witnet-ethereum-bridge"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"

[dependencies]
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"] }
bimap = "0.3.1"
env_logger = "0.6.1"
ethabi = "7.0"
futures = "0.1.28"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
toml = "0.4.10"
tokio-core = "0.1"
web3 = "0.7"
witnet_data_structures = { path = "../../data_structures" }
