[package]
name = "witnet-ethereum-bridge"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"

[dependencies]
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"] }
bimap = "0.4.0"
env_logger = "0.7.1"
ethabi = "9.0.0"
futures = "0.1.28"
futures-locks = "0.5.0"
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
structopt = "0.3.9"
tokio = "0.1"
toml = "0.5.6"
tokio-core = "0.1.17"
web3 = "0.10.0"
witnet_data_structures = { path = "../../data_structures" }
witnet_crypto = { path = "../../crypto" }
witnet_validations = { path = "../../validations" }
